src/test/resources/private/typechecking/fail/main_structure/fail05_mainAsMember.jova
class Main{

}

class Helper{

}

class Test{
    public int a;
    public string b;
    public Helper c;
    public Main d;
}